--- a/style.css
+++ b/style.css
@@ -456,13 +456,26 @@ footer {
 
 .video-placeholder {
     width: 100%;
-    height: 350px;
-    background-color: #e0e0e0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     margin-bottom: 30px;
+}
+
+.video-wrapper {
+    position: relative;
+    width: 100%;
+    /* 16:9 aspect ratio */
+    padding-top: 56.25%;
+    background-color: #e0e0e0;
     border-radius: 4px;
+    overflow: hidden;
+}
+
+.video-wrapper iframe.responsive-iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
 }
 
 .recipe-body-grid {
